refactor: Apply Java 25 best practices across elements, engine, integration, stateless, util, auth, schema, logging, resilience
Batch refactoring by 9 parallel agents across all major packages:

Elements package:
- Pattern matching instanceof in YTask, YSpecificationValidator
- Switch expressions in YTask, YNet
- var local variables throughout elements package
- Lambda comparators replacing anonymous Comparator classes
- Diamond inference, raw type fixes, enhanced generics

Engine package:
- Pattern matching instanceof in YEngine, YNetRunner, Marshaller
- Switch expressions for state/type dispatch
- var local variables in engine core classes
- Collection factory methods (List.of, Map.of)

Integration package:
- Virtual thread adoption for I/O-bound MCP/A2A operations
- Text blocks for JSON/XML protocol messages
- Modern HttpClient patterns
- Stream toList() modernization

Stateless engine:
- Pattern matching and switch expressions aligned with engine refactoring
- var local variables throughout

Util/Authentication/Exceptions/Schema/Logging/Resilience:
- String API modernization (isBlank, strip, formatted)
- Collection factory methods
- Stream toList() instead of collect(Collectors.toList())
- var for obvious local variable types
- Records for simple data holders

Build:
- Skip JaCoCo during refactoring phase
- Remove build cache extension for clean baseline

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF